// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`retries should keep retrying network errors until the retry attempts are exceeded 1`] = `[NetworkError: Server responded with 403: Forbidden]`;

exports[`should complete subscription by disposing 1`] = `
Object {
  "data": Object {
    "ping": "pong",
  },
}
`;

exports[`should execute a simple query 1`] = `
Object {
  "data": Object {
    "getValue": "value",
  },
}
`;
